Add seo tag plugin

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,6 +11,8 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+
+        {% seo %}
     </head>
     <body>
 
