· Enable video and audio configuration properties on CameraView component
- Audio bit rate
- Audio sample rate
- Audio channels
- Video bit rate

· Revert changes from commit #a5a72e10e427232a25ff49123a9189c51c72e742

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -29,7 +29,7 @@
         app:cameraGrid="off"
         app:cameraJpegQuality="100"
         app:cameraPlaySounds="true"
-        app:cameraSessionType="picture"
+        app:cameraSessionType="video"
         app:cameraVideoBitRate="128000" />
 
     <!-- Controls -->
