· Enable video and audio configuration properties on CameraView component
- Audio bit rate
- Audio sample rate
- Audio channels
- Video bit rate
- Video Frame Rate

--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -121,6 +121,7 @@
         </attr>
 
         <attr name="cameraVideoBitRate" format="integer" />
+        <attr name="cameraVideoFrameRate" format="integer" />
         <attr name="cameraAudioBitRate" format="integer" />
         <attr name="cameraAudioSampleRate" format="integer" />
 
