--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -26,7 +26,21 @@
         app:cameraGesturePinch="zoom"
         app:cameraGestureScrollHorizontal="exposureCorrection"
         app:cameraGestureScrollVertical="none"
-        app:cameraMode="picture" />
+        app:cameraMode="picture">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ciao"
+            android:textColor="@android:color/white"
+            android:layout_gravity="bottom|end"
+            app:layout_overlay="true"
+            app:layout_showInPreview="true"
+            app:layout_showInPicture="true"
+            app:layout_showInVideo="false"
+            />
+
+    </com.otaliastudios.cameraview.CameraView>
 
 
     <ImageButton
