--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -122,4 +122,16 @@
         <attr name="cameraExperimental" format="boolean" />
 
     </declare-styleable>
+
+    <declare-styleable name="CameraView_Layout">
+
+        <attr name="layout_overlay" format="boolean"/>
+
+        <attr name="layout_showInPreview" format="boolean"/>
+
+        <attr name="layout_showInPicture" format="boolean"/>
+
+        <attr name="layout_showInVideo" format="boolean"/>
+
+    </declare-styleable>
 </resources>
