--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -26,8 +26,7 @@
         app:cameraGesturePinch="zoom"
         app:cameraGestureScrollHorizontal="exposureCorrection"
         app:cameraGestureScrollVertical="none"
-        app:cameraMode="picture"
-        app:cameraDisableOverlayFor="none">
+        app:cameraMode="picture">
 
         <LinearLayout
             android:layout_width="wrap_content"
