Added cameraAutoFocusResetDelay xml attribute and associated documentation

--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -124,5 +124,7 @@
 
         <attr name="cameraExperimental" format="boolean" />
 
+        <attr name="cameraAutoFocusResetDelay" format="float"/>
+
     </declare-styleable>
 </resources>
