Better conformance to existing standards and conventions

--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -124,7 +124,7 @@
 
         <attr name="cameraExperimental" format="boolean" />
 
-        <attr name="cameraAutoFocusResetDelay" format="float"/>
+        <attr name="cameraAutoFocusResetDelay" format="integer|reference"/>
 
     </declare-styleable>
 </resources>
