Specify where to draw the overlay

--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -128,7 +128,9 @@
 
     <declare-styleable name="CameraView_Layout">
 
-        <attr name="layout_isOverlay" format="boolean"/>
+        <attr name="layout_drawInPreview" format="boolean"/>
+        <attr name="layout_drawInPictureSnapshot" format="boolean"/>
+        <attr name="layout_drawInVideoSnapshot" format="boolean"/>
 
     </declare-styleable>
 </resources>
