Create AutoFocusMarker and DefaultAutoFocusMarker

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -21,7 +21,7 @@
         app:cameraGrid="off"
         app:cameraFlash="off"
         app:cameraAudio="on"
-        app:cameraGestureTap="focusWithMarker"
+        app:cameraGestureTap="autofocus"
         app:cameraGestureLongTap="none"
         app:cameraGesturePinch="zoom"
         app:cameraGestureScrollHorizontal="exposureCorrection"
