--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -30,34 +30,32 @@
 
         <attr name="cameraGestureTap" format="enum">
             <enum name="none" value="0" />
-            <enum name="focus" value="1" />
-            <enum name="focusWithMarker" value="2" />
-            <enum name="capture" value="3" />
+            <enum name="autofocus" value="1" />
+            <enum name="takePicture" value="2" />
         </attr>
 
         <attr name="cameraGestureLongTap" format="enum">
             <enum name="none" value="0" />
-            <enum name="focus" value="1" />
-            <enum name="focusWithMarker" value="2" />
-            <enum name="capture" value="3" />
+            <enum name="autofocus" value="1" />
+            <enum name="takePicture" value="2" />
         </attr>
 
         <attr name="cameraGesturePinch" format="enum">
             <enum name="none" value="0" />
-            <enum name="zoom" value="4" />
-            <enum name="exposureCorrection" value="5" />
+            <enum name="zoom" value="3" />
+            <enum name="exposureCorrection" value="4" />
         </attr>
 
         <attr name="cameraGestureScrollHorizontal" format="enum">
             <enum name="none" value="0" />
-            <enum name="zoom" value="4" />
-            <enum name="exposureCorrection" value="5" />
+            <enum name="zoom" value="3" />
+            <enum name="exposureCorrection" value="4" />
         </attr>
 
         <attr name="cameraGestureScrollVertical" format="enum">
             <enum name="none" value="0" />
-            <enum name="zoom" value="4" />
-            <enum name="exposureCorrection" value="5" />
+            <enum name="zoom" value="3" />
+            <enum name="exposureCorrection" value="4" />
         </attr>
 
         <attr name="cameraFacing" format="enum">
