Basic Camera2 open-close integration

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -17,6 +17,7 @@
         android:layout_marginBottom="88dp"
         android:keepScreenOn="true"
         app:cameraExperimental="true"
+        app:cameraEngine="camera2"
         app:cameraPlaySounds="true"
         app:cameraGrid="off"
         app:cameraFlash="off"
