Camera2 working with all previews

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -18,6 +18,7 @@
         android:keepScreenOn="true"
         app:cameraExperimental="true"
         app:cameraEngine="camera2"
+        app:cameraPreview="glSurface"
         app:cameraPlaySounds="true"
         app:cameraGrid="off"
         app:cameraFlash="off"
