--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -131,5 +131,7 @@
 
         <attr name="cameraAutoFocusMarker" format="string|reference"/>
 
+        <attr name="cameraUseDeviceOrientation" format="boolean"/>
+
     </declare-styleable>
 </resources>
