--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -17,6 +17,7 @@
         android:layout_marginBottom="88dp"
         android:keepScreenOn="true"
         app:cameraExperimental="true"
+        app:cameraUseDeviceOrientation="false"
         app:cameraEngine="camera2"
         app:cameraPreview="glSurface"
         app:cameraPlaySounds="true"
