--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -134,4 +134,12 @@
         <attr name="cameraUseDeviceOrientation" format="boolean"/>
 
     </declare-styleable>
+
+    <declare-styleable name="CameraView_Layout">
+
+        <attr name="layout_drawInPreview" format="boolean"/>
+        <attr name="layout_drawInPictureSnapshot" format="boolean"/>
+        <attr name="layout_drawInVideoSnapshot" format="boolean"/>
+
+    </declare-styleable>
 </resources>
