--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -37,7 +37,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="bottom|end"
-            app:layout_drawOnPreview="false"
+            app:layout_isOverlay="true"
+            app:layout_drawOnPreview="true"
             app:layout_drawOnVideoSnapshot="true"
             app:layout_drawOnPictureSnapshot="true"
             android:gravity="center"
@@ -50,7 +51,6 @@
                 android:id="@+id/watermark_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CameraView"
                 android:textColor="@android:color/white" />
         </LinearLayout>
 
