Use single Overlay with three targets

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -51,6 +51,7 @@
                 android:id="@+id/watermark_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="CameraView"
                 android:textColor="@android:color/white" />
         </LinearLayout>
 
