Fix picture snapshots

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -48,10 +48,9 @@
                 android:layout_height="wrap_content"
                 android:src="@mipmap/cameraview" />
             <TextView
-                android:id="@+id/watermark_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CameraView"
+                android:text="Watermark"
                 android:textColor="@android:color/white" />
         </LinearLayout>
 
