Add demo app control

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -33,6 +33,7 @@
 
         <!-- Watermark -->
         <LinearLayout
+            android:id="@+id/watermark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
