Remove TODOs, improve logging

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -23,6 +23,7 @@
         app:cameraGrid="off"
         app:cameraFlash="off"
         app:cameraAudio="on"
+        app:cameraFacing="front"
         app:cameraGestureTap="autoFocus"
         app:cameraGestureLongTap="none"
         app:cameraGesturePinch="zoom"
