--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -46,14 +46,34 @@
 
     </com.otaliastudios.cameraview.CameraView>
 
-    <ImageButton
-        android:id="@+id/toggleCamera"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_margin="16dp"
-        android:layout_gravity="top|end"
-        android:background="@drawable/background"
-        app:srcCompat="@drawable/ic_switch" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+
+        android:layout_gravity="top|end">
+
+        <ImageButton
+            android:id="@+id/toggleCamera"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/background"
+            app:srcCompat="@drawable/ic_switch" />
+
+        <ImageButton
+            android:id="@+id/changeFilter"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/background"
+            app:srcCompat="@drawable/ic_filters" />
+    </LinearLayout>
+
+
+
+
+
 
     <!-- Controls -->
     <LinearLayout
