Feature Live Filters using Shaders (#527)
* added shader effects

* added setting shaders

* intermediate commit

* added shader implementation

* refatored code

* implemented initial effects

* modified few filters

* modified all effects

* implemented shader while taking picture and video

* updated all effects

* modified all filters range to 0.0f-1.0f

* added control to filter

* added shader effects

* added setting shaders

* intermediate commit

* added shader implementation

* refatored code

* implemented initial effects

* modified few filters

* modified all effects

* implemented shader while taking picture and video

* updated all effects

* modified all filters range to 0.0f-1.0f

* added control to filter

* modified shaders and removed the glsurfaceview dependency

* changed folder structure

* changed allignmen and filters

* added annotations

* code refacor

* changed effect name to filters

* changed filter implementation for image and video

* fixed for travis build

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -44,15 +44,31 @@
 
     </com.otaliastudios.cameraview.CameraView>
 
-    <ImageButton
-        android:id="@+id/toggleCamera"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_margin="16dp"
-        android:layout_gravity="top|end"
-        android:background="@drawable/background"
-        android:elevation="3dp"
-        app:srcCompat="@drawable/ic_switch" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="96dp"
+        android:layout_gravity="bottom|start">
+
+        <ImageButton
+            android:id="@+id/changeFilter"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/background"
+            android:elevation="3dp"
+            app:srcCompat="@drawable/ic_filters" />
+
+        <ImageButton
+            android:id="@+id/toggleCamera"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/background"
+            android:elevation="3dp"
+            app:srcCompat="@drawable/ic_switch" />
+    </LinearLayout>
 
     <!-- Controls -->
     <LinearLayout
