Add FILTER_CONTROL_1 and FILTER_CONTROL_2 to control filters with gestures

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -26,8 +26,8 @@
         app:cameraGestureTap="autoFocus"
         app:cameraGestureLongTap="none"
         app:cameraGesturePinch="zoom"
-        app:cameraGestureScrollHorizontal="exposureCorrection"
-        app:cameraGestureScrollVertical="none"
+        app:cameraGestureScrollHorizontal="filterControl1"
+        app:cameraGestureScrollVertical="exposureCorrection"
         app:cameraMode="picture"
         app:cameraAutoFocusMarker="@string/cameraview_default_autofocus_marker">
 
