--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -44,18 +44,24 @@
             <enum name="none" value="0" />
             <enum name="zoom" value="3" />
             <enum name="exposureCorrection" value="4" />
+            <enum name="filterControl1" value="5" />
+            <enum name="filterControl2" value="6" />
         </attr>
 
         <attr name="cameraGestureScrollHorizontal" format="enum">
             <enum name="none" value="0" />
             <enum name="zoom" value="3" />
             <enum name="exposureCorrection" value="4" />
+            <enum name="filterControl1" value="5" />
+            <enum name="filterControl2" value="6" />
         </attr>
 
         <attr name="cameraGestureScrollVertical" format="enum">
             <enum name="none" value="0" />
             <enum name="zoom" value="3" />
             <enum name="exposureCorrection" value="4" />
+            <enum name="filterControl1" value="5" />
+            <enum name="filterControl2" value="6" />
         </attr>
 
         <attr name="cameraEngine" format="enum">
