--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -20,7 +20,8 @@
         app:cameraPreview="glSurface"
         app:cameraPlaySounds="true"
         app:cameraGrid="off"
-        app:cameraFlash="auto"
+        app:cameraFlash="on"
+        app:cameraPictureSnapshotMetering="true"
         app:cameraAudio="on"
         app:cameraFacing="back"
         app:cameraGestureTap="autoFocus"
