Fix various bugs

--- a/demo/src/main/res/layout/activity_camera.xml
+++ b/demo/src/main/res/layout/activity_camera.xml
@@ -20,8 +20,7 @@
         app:cameraPreview="glSurface"
         app:cameraPlaySounds="true"
         app:cameraGrid="off"
-        app:cameraFlash="on"
-        app:cameraPictureSnapshotMetering="true"
+        app:cameraFlash="auto"
         app:cameraAudio="on"
         app:cameraFacing="back"
         app:cameraGestureTap="autoFocus"
