--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -141,6 +141,9 @@
 
         <attr name="cameraUseDeviceOrientation" format="boolean"/>
 
+        <attr name="cameraPictureMetering" format="boolean|reference"/>
+        <attr name="cameraPictureSnapshotMetering" format="boolean|reference"/>
+
         <attr name="cameraExperimental" format="boolean" />
 
     </declare-styleable>
