--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -28,6 +28,7 @@
         <attr name="cameraFrameProcessingMaxWidth" format="integer|reference" />
         <attr name="cameraFrameProcessingMaxHeight" format="integer|reference" />
         <attr name="cameraFrameProcessingFormat" format="integer|reference" />
+        <attr name="cameraFrameProcessingPoolSize" format="integer|reference" />
 
         <attr name="cameraVideoBitRate" format="integer|reference" />
         <attr name="cameraAudioBitRate" format="integer|reference" />
