Add setFrameProcessingExecutors API

--- a/cameraview/src/main/res/values/attrs.xml
+++ b/cameraview/src/main/res/values/attrs.xml
@@ -29,6 +29,7 @@
         <attr name="cameraFrameProcessingMaxHeight" format="integer|reference" />
         <attr name="cameraFrameProcessingFormat" format="integer|reference" />
         <attr name="cameraFrameProcessingPoolSize" format="integer|reference" />
+        <attr name="cameraFrameProcessingExecutors" format="integer|reference" />
 
         <attr name="cameraVideoBitRate" format="integer|reference" />
         <attr name="cameraAudioBitRate" format="integer|reference" />
